fix z-index for clicked backdrop

--- a/index.css
+++ b/index.css
@@ -262,7 +262,7 @@ body.blk .copyright {
 	height: 100vh;
 	width: 100vw;
 	background: #000;
-	z-index: 100;
+	z-index: 1000000;
 }
 
 #clickImage {
